# daraja-ai

./: .gitignore  AGENTS.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/daraja_ai/: __init__.py  analyser.py  server.py
tests/: test_smoke.py
