[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daraja-ai"
version = "0.1.0"
description = "AI-powered M-Pesa transaction intelligence — fraud signals, anomaly detection, payment analytics"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
license-files = ["LICENSE"]
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
keywords = ["kenya","mpesa","daraja","fraud","fintech","ai","africa","mcp","analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp      = ["mcp>=1.0.0", "anthropic>=0.28.0"]
app      = ["streamlit>=1.32.0", "plotly>=5.20.0"]
all      = ["daraja-ai[mcp,app]"]

[project.scripts]
daraja-ai = "daraja_ai.server:main"

[project.urls]
Homepage   = "https://github.com/gabrielmahia/daraja-ai"
Repository = "https://github.com/gabrielmahia/daraja-ai"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
